--- a/main_templates/main/header.html
+++ b/main_templates/main/header.html
@@ -16,6 +16,18 @@
               <a class="nav-link active" href="{% url 'movie:movie-index' %}">Movies</a>
             </li>
 
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">LogOut</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'login' %}">LogIn</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'signup' %}">Register</a>
+            </li>
+            {% endif %}
           </ul>
         </div>
       </div>
